// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`function declaration arrow function test 1`] = `
"const A = () => {
  return useObserver(() => {
    const x = useMobx({
      a: 1
    });
    return x.a;
  });
};"
`;

exports[`function declaration base test 1`] = `
"function A() {
  return useObserver(() => {
    const x = useMobx({
      a: 1
    });
    return x.a;
  });
}"
`;

exports[`function declaration nested function test 1`] = `
"function A() {
  function B() {
    return useObserver(() => {
      const x = useMobx({
        a: 1
      });
      return x.a;
    });
  }
}"
`;
